Sat Nov  1 23:11:05 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl/utils.rb (start_server): Don't close sockets before
	  threads finished.

Sat Nov  1 22:06:24 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl/test_ssl_session.rb (test_ctx_client_session_cb): Don't
	  ignore errors of SSL accept.
	  (test_ctx_server_session_cb): Ditto.

	* test/openssl/utils.rb (server_loop): Add ignore_ssl_accept_error
	  argument.
	  (start_server): Refine threads waits.

	* test/ruby/envutil.rb (assert_join_threads): Show a thread before
	  backtrace.

Sat Nov  1 20:40:18 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl/utils.rb (start_server, server_loop): Use a
	  pipe to stop server instead of shutdown/close a listening socket.

Sat Nov  1 19:24:59 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_join_threads): New assertion to
	  join multiple threads without exceptions.

Sat Nov  1 17:09:32 2014  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance_with_mulfunc): Fix free work area
	  location.
	  [ruby-dev:48723] [Bug #10464]
	  [ruby-core:66044] [Bug #10465]
	  Reported by Kohji Nishihama.

Sat Nov  1 15:45:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_atmark): mere atmark and two atmarks without
	  succeeding identifiers are invalid as instance/class variable
	  names.

Sat Nov  1 06:31:41 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_variant.c: use typed data.

Fri Oct 31 13:55:28 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/*: remove DL as it is replaced by Fiddle.
	  [Feature #5458] Thanks to Jonan Scheffler <jonanscheffler@gmail.com>
	  for this patch

	* test/dl/*: ditto.

Fri Oct 31 15:26:02 2014  Charles Oliver Nutter  <headius@headius.com>

	* test/openssl/test_ssl.rb: Add certificate verification chain
	  test from JRuby community.

Fri Oct 31 18:58:02 2014  Charles Oliver Nutter  <headius@headius.com>
